SubBt/force-app/main/default/objects/Questions__c/Questions__c.object-meta.xml
<CustomObject>
    <label>Questions</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>