SubBt/force-app/main/default/objects/Questions__c/fields/Customize__c.field-meta.xml
<CustomField>
    <fullName>Customize__c</fullName>
    <label>Question Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>