SubBt/force-app/main/default/objects/Questions__c/fields/group_name__c.field-meta.xml
<CustomField>
    <fullName>group_name__c</fullName>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>